--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
 .App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  padding: 5rem;
+
+}
+
+/* BroadbandDeals Styles*/ 
+.container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.dealsContainer{
+  margin: 10rem;
+  background-color: white;
+  padding: 3rem;
+  border-radius: 5%;
+}
+
+.companyName{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 2rem;
+  padding: 1rem;
+  
+}
+
+.companyInfo{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 2rem;
+  float: left;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.price{
+  display: flex;
+  flex-direction: column;
+ 
 }
